--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,4 +1,3 @@
-Noch nicht erledigt:
 
 Thema SEO 
   - in baseURL.html
@@ -7,12 +6,10 @@ Thema SEO
    - SEO Tipp für link rel=“alternate”
    - meta keywords
 
-Thema Responsiveness
-   - MQ & Sidepanel Menu
+Responsiveness: Single Apartment view to switch in single column on small screens
+
+Imagegrid-Overlay to indicate total number of pictures
+
+Use Hugo image functions to generate defined resoltuion and optimized thumbnails
 
 
-Overlay to indicate total number of pictures
-
-
-
-   
