--- a/ToDo.txt
+++ b/ToDo.txt
@@ -11,5 +11,10 @@ Responsiveness: Single Apartment view to switch in single column on small screen
 Imagegrid-Overlay to indicate total number of pictures
 
 Use Hugo image functions to generate defined resoltuion and optimized thumbnails
+See as input: https://christianspecht.de/2020/08/10/creating-an-image-gallery-with-hugo-and-lightbox2/
 
+Dokumentation:
 
+Document used lightbox2 v2.11.4
+https://github.com/lokesh/lightbox2/releases
+https://lokeshdhakar.com/projects/lightbox2/
