Apartment List and Image processing

--- a/projektwohnung-site/i18n/de.yaml
+++ b/projektwohnung-site/i18n/de.yaml
@@ -10,6 +10,8 @@ titleLocation:
   other: 'Standort'
 titleAvailability:
   other: 'Verfügbarkeit'
+backToApartmentList:
+  other: 'Zurück zur Apartment Liste'
 bedroomsWithCount:
   other: '{{ . }} Schlafzimmer'
 bedsWithCount:
