--- a/projektwohnung-site/i18n/en.yaml
+++ b/projektwohnung-site/i18n/en.yaml
@@ -10,6 +10,8 @@ titleLocation:
   other: 'Location'
 titleAvailability:
   other: 'Availability'
+backToApartmentList:
+  other: 'Back to apartment list'
 bedroomsWithCount:
   one: '{{ . }} bedroom'
   other: '{{ . }} bedrooms'
